tests/golden/error/relative_import_depth2_fail/outer/middle/deep.tg
// Depth 2 module: outer::middle::deep
// Attempts `use target::secret_fn` — should fail since `target` is at
// outer::target, two levels up (grandparent's child).
use target::secret_fn;

pub fn wrapper() -> String {
    secret_fn()
}
